# suprglidr

./: .gitignore  CMakeLists.txt  README.org  build.sh
include/: debug.h  font.h  input.h  keyboard.h  output.h  ssd1306.h  util.h
res/: cases.20250216-154323.FCBak  cases.FCStd  pcb bottom.stl  switch case.stl
src/: debug.c  encoder.pio  input.c  keyboard.c  main.c  output.c  ssd1306.c  usb_descriptors.c  util.c
